# intelligent-fraud-detection-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.py
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml  ml-retrain.yml
chatbot/: README.md  __init__.py  agent.py  lambda_handler.py
chatbot/config/: __init__.py  constants.py  settings.py
chatbot/prompts/: rejection_prompt.md  system_prompt.md  user_examples.md
chatbot/tests/: __init__.py  conftest.py  test_agent.py  test_end_to_end.py  test_tools.py
chatbot/tools/: __init__.py  explain_alarms.py  qa_handler.py  retrieve_guidance.py  submit_and_score.py
chatbot/utils/: __init__.py  api_client.py  formatter.py  logger.py  session_manager.py
docs/: api.md  architecture.md  deployment.md  fraud_detection.md  policies.md  user_guide.md
frontend/: app.py
frontend/components/: chat_interface.py  claim_form.py  fraud_visualizer.py  result_panel.py
frontend/static/: style.css
frontend/tests/: test_api_integration.py  test_ui_components.py
frontend/utils/: api_client.py  formatter.py  session_state.py
infra/cloudformation/: api-stack.yaml  ml-stack.yaml
infra/deployment/: docker-compose.yml  lambda_deploy.sh
infra/scripts/: deploy_all.sh  migrate_data.py  seed_db.sql  train_and_deploy_ml.py
infra/terraform/: api_gateway.tf  backend.tf  lambda.tf  main.tf  outputs.tf  rds.tf  s3.tf  sagemaker.tf  terraform.tfvars.dev  terraform.tfvars.prod  variables.tf
ml/: evaluate.py  inference.py  preprocess.py  train.py
ml/sagemaker/: deploy.py  requirements.txt  train.py
scripts/: debug_score.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/endpoints/: chatbot.py  explain_alarm.py  get_guidance.py  score_claim.py
src/fraud_engine/: __init__.py  alarms.py  constants.py  decision_policy.py  ml_inference.py
src/fraud_engine/checks/: __init__.py  high_amount.py  suspicious_keywords.py  vendor_fraud.py
src/fraud_engine/rules/: duplicate_claims.py  external_mismatch.py  high_amount.py  location_mismatch.py  repeat_claimant.py  suspicious_keywords.py  time_patterns.py  vendor_fraud.py
src/models/: claim.py  fraud.py  policy.py
src/nlp/: invoice_processor.py  text_analyzer.py
src/services/: explain.py  fraud_engine.py  guidance.py
src/utils/: cache.py  db.py  external_apis.py  logger.py  logging_middleware.py  s3_handler.py  security.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_api_endpoints.py  test_chatbot.py  test_score_claim_endpoint.py
tests/unit/: cache.py
tests/unit/test_fraud_engine/: test_alarms.py  test_decision_policy.py  test_ml_inference.py
tests/unit/test_nlp/: test_text_analyzer.py
tests/unit/test_utils/: test_external_apis.py
